--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     - TEST_SDK=iphonesimulator12.1 OS=12.1 NAME='iPhone 7'
 
 script:
-  - set -o pipefail && xcodebuild test -enableCodeCoverage YES -project QciTestPods.xcodeproj -scheme QciTestPods -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
+  - set -o pipefail && xcodebuild test -enableCodeCoverage YES -project QciTestPods.xcodeproj -scheme QciTestPodsTests -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
 
 after_success:
   - slather
